# Hot-Pile-Sim

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  runner.py
hot_pile_sim/: __init__.py  hot_pile.py
hot_pile_sim/strategy/: base.py  greedy.py  rngesus.py  simple.py
hot_pile_sim/util/: card_counter.py
