[project]
version = "0.1.0"
name = "hot_pile_sim"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hot_pile_sim"]

[tool.mypy]
python_version = "3.10"
exclude_gitignore = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
include = ["hot_pile_sim/*.py", "./runner.py"]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    # flake8-annotations
    "ANN",
    # flake8-blind-except
    "BLE",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-import-conventions
    "ICN",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # flynt
    "FLY",
    # isort
    "I",
    # Numpy
    "NPY",
    # pep8-naming
    "N",
    # Perflint
    "PERF",
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

ignore = [
    "ISC001",  # conflict with formatter
    "UP015",   # explicit is better than implicit
    "UP038",   # deprecated
    "FURB101", # Nothing wrong with using open and read
    "FURB118", # this is not better
    "TRY003",  # too nitpicky
]

[tool.ruff.lint.per-file-ignores]
"runner.py" = ["T20"]
